error
//{ Driver Code Starts
//Initial template for C++

#include<bits/stdc++.h> 
using namespace std;

// } Driver Code Ends
//User function template for C++

class Solution
{
  public:
    string lookandsay(int n) {
        // code here
      
    }   
    string temp(int n){
        if(n==1){
            return "1";
        }
        string s=temp(n-1);
        int count=0;
        char number=0;
        string s1="";
        for(int i=1;i<=s.size();i++){
            if(i==1){
                number=s[i];
                count++;
            }else if(s[i]==s[i-1]){
                count++;
            }else{
                s1+=to_string(count);
                s1.append(number);
                count=1;
                number=s[i];
            }
        }
        return s;
    }
};

//{ Driver Code Starts.
int main() {
    int t;
    cin>>t;
    while(t--)
    {
        int n;
        cin>>n;
        Solution obj;
        cout<<obj.lookandsay(n)<<endl;
    }
    return 0;
}
// } Driver Code Ends












error


./Solution.cpp: In member function 'std::__cxx11::string Solution::temp(int)':
./Solution.cpp:33:33: error: no matching function for call to 'std::__cxx11::basic_string<char>::append(char&)'
                 s1.append(number);
                                 ^
In file included from /usr/local/include/c++/5.4.0/string:52:0,
                 from /usr/local/include/c++/5.4.0/bits/locale_classes.h:40,
                 from /usr/local/include/c++/5.4.0/bits/ios_base.h:41,
                 from /usr...
